--- a/area_personale/recensioni_maldive-parigi.html
+++ b/area_personale/recensioni_maldive-parigi.html
@@ -70,11 +70,11 @@
 
                     <div class="list-group">
                         <span class="list-group-item list-group-item-default">Area personale</span>
-                        <a href="/profilo.html" class="list-group-item"><i class="fa fa-user"></i> Profilo</a>
-                        <a href="/carrello.html" class="list-group-item"><i class="fa fa-shopping-cart"></i><span class="badge">1</span> Carrello</a>
-                        <a href="/acquisti.html" class="list-group-item"><i class="md md-credit-card"></i> I miei acquisti</a>
-                        <a href="/recensioni/profilo_maldive.html" class="list-group-item active"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
-                        <a href="/impostazioni.html" class="list-group-item"><i class="fa fa-cog"></i> Impostazioni</a>
+                        <a href="/area_personale/profilo.html" class="list-group-item"><i class="fa fa-user"></i> Profilo</a>
+                        <a href="/area_personale/carrello.html" class="list-group-item"><i class="fa fa-shopping-cart"></i><span class="badge">1</span> Carrello</a>
+                        <a href="/area_personale/acquisti.html" class="list-group-item"><i class="md md-credit-card"></i> I miei acquisti</a>
+                        <a href="/area_personale/recensioni_maldive-parigi.html" class="list-group-item active"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
+                        <a href="/area_personale/impostazioni.html" class="list-group-item"><i class="fa fa-cog"></i> Impostazioni</a>
                     </div>
 
                 </div>
@@ -84,6 +84,35 @@
                 <div class="col-md-9">
 
 
+                    <!-- PARIGI -->
+
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <div class="pull-left">
+                                <h4>Parigi</h4>
+                            </div>
+                            <div class="header-center">
+                            </div>
+                            <div class="pull-right">
+                                <h4>08-05-2015</h4>
+                            </div>
+                            <div class="clearfix"></div>
+                        </div>
+                        <div class="panel-body">
+                            <img src="/img/parigi550x550.jpg" alt="Immagine di copertina del viaggio" class="purchase-item-thumbnail fixed hidden-xs" />
+
+                            <div class="purchase-item-details">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                <hr style="margin-top: 10px; margin-bottom: 15px;" />
+                            </div>
+                            <div>
+                                <a class="btn btn-warning pull-left" href="/area_personale/recensioni_maldive-parigi_modifica-parigi.html" role="button">Modifica</a>
+                                <a class="btn btn-default pull-right" href="/area_personale/recensioni_maldive.html" role="button">Rimuovi</a>
+                            </div>
+
+                        </div>
+                    </div>
+                    
                     <!-- MALDIVE -->
 
                     <div class="panel panel-default">
@@ -102,19 +131,8 @@
                             <img src="/img/maldive550x550.jpg" alt="Immagine di copertina del viaggio" class="purchase-item-thumbnail fixed hidden-xs" />
 
                             <div class="purchase-item-details">
-                                <form>
-                                    <div class="form-group">
-                                        <textarea class="form-control" rows="6" placeholder="Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."></textarea>
-                                    </div>
-                                    <div>
-                                    <form action="demo_form.asp">
-                                        Aggiungi foto<input type="file" name="Image"><br>
-                                        <a class="btn btn-default" href="#" role="button">Carica foto</a>
-                                    </form>
-                                    </div>
-                                </form>
-                            </div>
-                            <hr style="margin-top: 15px; margin-bottom: 15px;" />
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                <hr style="margin-top: 10px; margin-bottom: 15px;" />
                                 <!-- Bootstrap Image Gallery lightbox -->
                                 <div id="blueimp-gallery" class="blueimp-gallery">
                                     <!-- The container for the modal slides -->
@@ -133,9 +151,6 @@
                                                 <div class="modal-header">
                                                     <button type="button" class="close" aria-hidden="true">&times;</button>
                                                     <h4 class="modal-title"></h4>
-                                                    <button type="button" class="btn btn-default">
-                                                        Rimuovi
-                                                    </button>
                                                 </div>
                                                 <div class="modal-body next"></div>
                                                 <div class="modal-footer">
@@ -170,9 +185,11 @@
                                 </div>
                                 <hr style="margin-top: 15px; margin-bottom: 15px;"/>
                                 <div>
-                                <a class="btn btn-warning pull-left" href="/recensioni/profilo_maldive.html" role="button">Pubblica</a>
-                                <a class="btn btn-default pull-right" href="/recensioni/profilo_vuoto.html" role="button">Rimuovi</a>
+                                    <a class="btn btn-warning pull-left" href="/area_personale/recensioni_maldive-parigi_modifica-maldive.html" role="button">Modifica</a>
+                                    <a class="btn btn-default pull-right" href="/area_personale/recensioni_parigi.html" role="button">Rimuovi</a>
                                 </div>
+                            </div>
+
                         </div>
                     </div>
 
