--- a/area_personale/acquisti_conparigi.html
+++ b/area_personale/acquisti_conparigi.html
@@ -15,20 +15,20 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Main CSS -->
-    <link href="css/main.css" rel="stylesheet">
+    <link href="/css/main.css" rel="stylesheet">
 
     <!-- FontAwesome -->
-    <link href="fontawesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="fontawesome/css/font-awesome.css" rel="stylesheet">
+    <link href="/fontawesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/fontawesome/css/font-awesome.css" rel="stylesheet">
 
     <!-- MapGlyphs -->
-    <link href="mapglyphs/mapglyphs.css" rel="stylesheet">
+    <link href="/mapglyphs/mapglyphs.css" rel="stylesheet">
 
     <!-- Material Design iconic font -->
-    <link href="material-design-iconic-font/css/material-design-iconic-font.css" rel="stylesheet">
+    <link href="/material-design-iconic-font/css/material-design-iconic-font.css" rel="stylesheet">
 
 </head>
 
@@ -48,7 +48,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <ol class="breadcrumb" id="path">
-                        <li><a href="index.html">Home</a>
+                        <li><a href="/index.html">Home</a>
                         </li>
                         <li>Area Personale</li>
                         <li class="active">I miei acquisti</li>
@@ -66,11 +66,11 @@
 
                     <div class="list-group">
                         <span class="list-group-item list-group-item-default">Area personale</span>
-                        <a href="profilo.html" class="list-group-item"><i class="fa fa-user"></i> Profilo</a>
-                        <a href="carrello.html" class="list-group-item"><i class="fa fa-shopping-cart"></i><span class="badge">1</span> Carrello</a>
-                        <a href="acquisti_conparigi.html" class="list-group-item active"><i class="md md-credit-card"></i> I miei acquisti</a>
-                        <a href="/recensioni/profilo_maldive.html" class="list-group-item"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
-                        <a href="impostazioni.html" class="list-group-item"><i class="fa fa-cog"></i> Impostazioni</a>
+                        <a href="/area_personale/profilo.html" class="list-group-item"><i class="fa fa-user"></i> Profilo</a>
+                        <a href="/area_personale/carrello.html" class="list-group-item"><i class="fa fa-shopping-cart"></i><span class="badge">1</span> Carrello</a>
+                        <a href="/area_personale/acquisti_conparigi.html" class="list-group-item active"><i class="md md-credit-card"></i> I miei acquisti</a>
+                        <a href="/area_personale/recensioni_maldive.html" class="list-group-item"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
+                        <a href="/area_personale/impostazioni.html" class="list-group-item"><i class="fa fa-cog"></i> Impostazioni</a>
                     </div>
 
                 </div>
@@ -94,7 +94,7 @@
                             <div class="clearfix"></div>
                         </div>
                         <div class="panel-body">
-                            <img src="img/parigi550x550.jpg" alt="immagine di copertina del viaggio" class="purchase-item-thumbnail fixed hidden-xs" />
+                            <img src="/img/parigi550x550.jpg" alt="immagine di copertina del viaggio" class="purchase-item-thumbnail fixed hidden-xs" />
 
                             <div class="purchase-item-details">
                                 <p>Transazione # 404-2941210-0056455</p>
@@ -102,9 +102,9 @@
                                 <p>Totale: EUR 1.700,00</p>
                                 <p>VISA/ELECTRON - ************0123</p>
                                 <hr/>
-                                <a class="btn btn-warning" href="/fattura_404-2941210-0056455.pdf" role="button">Fattura</a>
+                                <a class="btn btn-warning" href="/area_personale/fattura_404-2941210-0056455.pdf" role="button">Fattura</a>
                                 <a class="btn btn-default" href="/contatti.html" role="button">Segnala un problema</a>
-                                <a class="btn btn-success" href="/recensioni/profilo_parigi_inserisci.html" role="button">Scrivi una recensione</a>
+                                <a class="btn btn-success" href="/area_personale/recensioni_parigi_inserisci.html" role="button">Scrivi una recensione</a>
                             </div>
 
                         </div>
@@ -125,7 +125,7 @@
                             <div class="clearfix"></div>
                         </div>
                         <div class="panel-body">
-                            <img src="img/maldive550x550.jpg" alt="immagine di copertina del viaggio" class="purchase-item-thumbnail fixed hidden-xs" />
+                            <img src="/img/maldive550x550.jpg" alt="immagine di copertina del viaggio" class="purchase-item-thumbnail fixed hidden-xs" />
 
                             <div class="purchase-item-details">
                                 <p>Transazione # 404-2941210-6149129</p>
@@ -135,7 +135,7 @@
                                 <hr/>
                                 <a class="btn btn-warning" href="/fattura_404-2941210-6149129.pdf" role="button">Fattura</a>
                                 <a class="btn btn-default" href="/contatti.html" role="button">Segnala un problema</a>
-                                <a class="btn btn-default" href="/recensioni/profilo_maldive_modifica.html" role="button">Modifica la recensione</a>
+                                <a class="btn btn-default" href="/area_personale/recensioni_maldive_modifica.html" role="button">Modifica la recensione</a>
                             </div>
 
                         </div>
@@ -158,16 +158,16 @@
 
     <!-- Load page from id start -->
     <script>
-        $("#navbar").load("navbar.html");
+        $("#navbar").load("/navbar.html");
     </script>
 
     <script>
-        $("#footer").load("footer.html");
+        $("#footer").load("/footer.html");
     </script>
     <!-- Load page from id end -->
 
     <!-- Bootstrap Javascript Core-->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
 
 </body>
 
