--- a/area_personale/carrello_vuoto.html
+++ b/area_personale/carrello_vuoto.html
@@ -15,20 +15,20 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Main CSS -->
-    <link href="css/main.css" rel="stylesheet">
+    <link href="/css/main.css" rel="stylesheet">
 
     <!-- FontAwesome -->
-    <link href="fontawesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="fontawesome/css/font-awesome.css" rel="stylesheet">
+    <link href="/fontawesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/fontawesome/css/font-awesome.css" rel="stylesheet">
 
     <!-- MapGlyphs -->
-    <link href="mapglyphs/mapglyphs.css" rel="stylesheet">
+    <link href="/mapglyphs/mapglyphs.css" rel="stylesheet">
 
     <!-- Material Design iconic font -->
-    <link href="material-design-iconic-font/css/material-design-iconic-font.css" rel="stylesheet">
+    <link href="/material-design-iconic-font/css/material-design-iconic-font.css" rel="stylesheet">
 
 </head>
 
@@ -48,7 +48,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <ol class="breadcrumb" id="path">
-                        <li><a href="index.html">Home</a>
+                        <li><a href="/index.html">Home</a>
                         </li>
                         <li>Area Personale</li>
                         <li class="active">Carrello</li>
@@ -66,11 +66,11 @@
 
                     <div class="list-group">
                         <span class="list-group-item list-group-item-default">Area personale</span>
-                        <a href="profilo.html" class="list-group-item"><i class="fa fa-user"></i> Profilo</a>
-                        <a href="carrello_vuoto.html" class="list-group-item active"><i class="fa fa-shopping-cart"></i> Carrello</a>
-                        <a href="acquisti.html" class="list-group-item"><i class="md md-credit-card"></i> I miei acquisti</a>
-                        <a href="/recensioni/profilo_maldive.html" class="list-group-item"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
-                        <a href="impostazioni.html" class="list-group-item"><i class="fa fa-cog"></i> Impostazioni</a>
+                        <a href="/area_personale/profilo.html" class="list-group-item"><i class="fa fa-user"></i> Profilo</a>
+                        <a href="/area_personale/carrello_vuoto.html" class="list-group-item active"><i class="fa fa-shopping-cart"></i> Carrello</a>
+                        <a href="/area_personale/acquisti.html" class="list-group-item"><i class="md md-credit-card"></i> I miei acquisti</a>
+                        <a href="/area_personale/recensioni_maldive.html" class="list-group-item"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
+                        <a href="/area_personale/impostazioni.html" class="list-group-item"><i class="fa fa-cog"></i> Impostazioni</a>
                     </div>
 
                 </div>
@@ -101,16 +101,16 @@
 
     <!-- Load page from id start -->
     <script>
-        $("#navbar").load("navbar.html");
+        $("#navbar").load("/navbar.html");
     </script>
 
     <script>
-        $("#footer").load("footer.html");
+        $("#footer").load("/footer.html");
     </script>
     <!-- Load page from id end -->
 
     <!-- Bootstrap Javascript Core-->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
 
 </body>
 
