--- a/area_personale/recensioni_maldive-parigi_modifica-parigi.html
+++ b/area_personale/recensioni_maldive-parigi_modifica-parigi.html
@@ -70,11 +70,11 @@
 
                     <div class="list-group">
                         <span class="list-group-item list-group-item-default">Area personale</span>
-                        <a href="/profilo.html" class="list-group-item"><i class="fa fa-user"></i> Profilo</a>
-                        <a href="/carrello.html" class="list-group-item"><i class="fa fa-shopping-cart"></i><span class="badge">1</span> Carrello</a>
-                        <a href="/acquisti.html" class="list-group-item"><i class="md md-credit-card"></i> I miei acquisti</a>
-                        <a href="/recensioni/profilo_maldive-parigi.html" class="list-group-item active"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
-                        <a href="/impostazioni.html" class="list-group-item"><i class="fa fa-cog"></i> Impostazioni</a>
+                        <a href="/area_personale/profilo.html" class="list-group-item"><i class="fa fa-user"></i> Profilo</a>
+                        <a href="/area_personale/carrello.html" class="list-group-item"><i class="fa fa-shopping-cart"></i><span class="badge">1</span> Carrello</a>
+                        <a href="/area_personale/acquisti.html" class="list-group-item"><i class="md md-credit-card"></i> I miei acquisti</a>
+                        <a href="/area_personale/recensioni_maldive-parigi.html" class="list-group-item active"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
+                        <a href="/area_personale/impostazioni.html" class="list-group-item"><i class="fa fa-cog"></i> Impostazioni</a>
                     </div>
 
                 </div>
@@ -112,8 +112,8 @@
                                         <a class="btn btn-default" href="#" role="button">Carica foto</a>
                                     </form>
                                     <br><br>
-                                        <a class="btn btn-warning pull-left" href="/recensioni/profilo_maldive-parigi.html" role="button">Pubblica</a>
-                                        <a class="btn btn-default pull-right" href="/recensioni/profilo_maldive.html" role="button">Rimuovi</a>
+                                        <a class="btn btn-warning pull-left" href="/area_personale/recensioni_maldive-parigi.html" role="button">Pubblica</a>
+                                        <a class="btn btn-default pull-right" href="/area_personale/recensioni_maldive.html" role="button">Rimuovi</a>
                                     </div>
                                 </form>
                             </div>
