--- a/area_personale/recensioni_parigi.html
+++ b/area_personale/recensioni_parigi.html
@@ -70,11 +70,11 @@
 
                     <div class="list-group">
                         <span class="list-group-item list-group-item-default">Area personale</span>
-                        <a href="/profilo.html" class="list-group-item"><i class="fa fa-user"></i> Profilo</a>
-                        <a href="/carrello.html" class="list-group-item"><i class="fa fa-shopping-cart"></i><span class="badge">1</span> Carrello</a>
-                        <a href="/acquisti.html" class="list-group-item"><i class="md md-credit-card"></i> I miei acquisti</a>
-                        <a href="/recensioni/profilo_parigi.html" class="list-group-item active"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
-                        <a href="/impostazioni.html" class="list-group-item"><i class="fa fa-cog"></i> Impostazioni</a>
+                        <a href="/area_personale/profilo.html" class="list-group-item"><i class="fa fa-user"></i> Profilo</a>
+                        <a href="/area_personale/carrello.html" class="list-group-item"><i class="fa fa-shopping-cart"></i><span class="badge">1</span> Carrello</a>
+                        <a href="/area_personale/acquisti.html" class="list-group-item"><i class="md md-credit-card"></i> I miei acquisti</a>
+                        <a href="/area_personale/recensioni_parigi.html" class="list-group-item active"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
+                        <a href="/area_personale/impostazioni.html" class="list-group-item"><i class="fa fa-cog"></i> Impostazioni</a>
                     </div>
 
                 </div>
@@ -105,8 +105,8 @@
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                                 <hr style="margin-top: 15px; margin-bottom: 15px;"/>
                                 <div>
-                                <a class="btn btn-warning pull-left" href="/recensioni/profilo_parigi_modifica.html" role="button">Modifica</a>
-                                <a class="btn btn-default pull-right" href="/recensioni/profilo_vuoto.html" role="button">Rimuovi</a>
+                                <a class="btn btn-warning pull-left" href="/recensioni/recensioni_parigi_modifica.html" role="button">Modifica</a>
+                                <a class="btn btn-default pull-right" href="/recensioni/recensioni_vuoto.html" role="button">Rimuovi</a>
                                 </div>
 
                             </div>
