--- a/area_personale/recensioni_vuoto.html
+++ b/area_personale/recensioni_vuoto.html
@@ -66,11 +66,11 @@
 
                     <div class="list-group">
                         <span class="list-group-item list-group-item-default">Area personale</span>
-                        <a href="/profilo.html" class="list-group-item"><i class="fa fa-user"></i> Profilo</a>
-                        <a href="/carrello.html" class="list-group-item"><i class="fa fa-shopping-cart"></i><span class="badge">1</span> Carrello</a>
-                        <a href="/acquisti.html" class="list-group-item"><i class="md md-credit-card"></i> I miei acquisti</a>
-                        <a href="/recensioni/profilo_vuoto.html" class="list-group-item active"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
-                        <a href="/impostazioni.html" class="list-group-item"><i class="fa fa-cog"></i> Impostazioni</a>
+                        <a href="/area_personale/profilo.html" class="list-group-item"><i class="fa fa-user"></i> Profilo</a>
+                        <a href="/area_personale/carrello.html" class="list-group-item"><i class="fa fa-shopping-cart"></i><span class="badge">1</span> Carrello</a>
+                        <a href="/area_personale/acquisti.html" class="list-group-item"><i class="md md-credit-card"></i> I miei acquisti</a>
+                        <a href="/area_personale/recensioni_vuoto.html" class="list-group-item active"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
+                        <a href="/area_personale/impostazioni.html" class="list-group-item"><i class="fa fa-cog"></i> Impostazioni</a>
                     </div>
 
                 </div>
