--- a/navbar.html
+++ b/navbar.html
@@ -91,8 +91,8 @@
                                         <input type="checkbox">Ricordami
                                     </label>
                                 </div>
-                                <a class="btn btn-success btn-block" href="/profilo.html">Accedi</a>
-                                <a class="btn btn-primary btn-block" href="/profilo.html"><span class="fa fa-facebook" style="width: 15px;"></span> Accedi con Facebook
+                                <a class="btn btn-success btn-block" href="/area_personale/profilo.html">Accedi</a>
+                                <a class="btn btn-primary btn-block" href="/area_personale/profilo.html"><span class="fa fa-facebook" style="width: 15px;"></span> Accedi con Facebook
                                 </a>
                                 <hr/>
                                 <p class="text-center" style="margin-top: 0px; margin-bottom: 0px;">Non sei registrato? <a href="/registrazione.html">Clicca qui!</a>
@@ -102,7 +102,7 @@
                     </ul>
                 </li>
 
-                <li><a href="/carrello.html"><i class="fa fa-shopping-cart"></i> <span class="badge">1</span></a>
+                <li><a href="/area_personale/carrello.html"><i class="fa fa-shopping-cart"></i> <span class="badge">1</span></a>
                 </li>
             </ul>
 
