--- a/viaggi/acquisto-viaggio_transazione.html
+++ b/viaggi/acquisto-viaggio_transazione.html
@@ -99,7 +99,7 @@
                         </div>
                         <div class="row">
                             <div class="col-xs-12">
-                                <a href="/acquisti_conparigi.html" class="btn btn-success btn-lg btn-block" type="submit">Paga</a>
+                                <a href="/area_personale/acquisti_conparigi.html" class="btn btn-success btn-lg btn-block" type="submit">Paga</a>
                             </div>
                         </div>
                         <div class="row" style="display:none;">
