--- a/registrazione.html
+++ b/registrazione.html
@@ -149,7 +149,7 @@
                                     </tbody>
                                     </table>
                                     </div>
-                                    <input type="submit" class="btn btn-default" value="Conferma" formaction="profilo.html">
+                                    <input type="submit" class="btn btn-default" value="Registrati" formaction="/area_personale/profilo.html">
                                 </form>
                             </div>
 
@@ -268,7 +268,7 @@
                                     </tbody>
                                     </table>
                                     </div>
-                                    <input type="submit"  class="btn btn-default" value="Registrati" formaction="profilo.html">
+                                    <input type="submit"  class="btn btn-default" value="Registrati" formaction="/area_personale/profilo.html">
                                 </form>
                             </div>
 
