--- a/viaggi/acquisto-viaggio.html
+++ b/viaggi/acquisto-viaggio.html
@@ -617,12 +617,12 @@
                             <hr style="margin-top: 2px; margin-bottom: 2px; border-color: #DEDEDE;" />
 
                             <div class="panel-body hidden-xs">
-                                <a class="btn btn-default pull-left" href="/viaggi/carrello_conparigi.html" role="button">Torna al carrello</a>
-                                <input type="submit" class="btn btn-warning pull-right" value="Conferma dati" formaction="/viaggi/acquisto-viaggio_transazione">
+                                <a class="btn btn-default pull-left" href="/area_personale/carrello_conparigi.html" role="button">Torna al carrello</a>
+                                <input type="submit" class="btn btn-warning pull-right" value="Conferma dati" formaction="/viaggi/acquisto-viaggio_transazione.html">
                             </div>
                             <div class="panel-body visible-xs">
                                 <p class="text-center visible-xs">
-                                    <a class="btn btn-default" href="/viaggi/carrello_conparigi.html" role="button">Torna al carrello</a>
+                                    <a class="btn btn-default" href="/area_personale/carrello_conparigi.html" role="button">Torna al carrello</a>
                                 </p>
                                 <p class="text-center visible-xs">
                                     <input type="submit" class="btn btn-warning" value="Conferma dati" formaction="/viaggi/acquisto-viaggio_transazione.html">
